# tree-sitter-puppet

./: .gitignore  Cargo.toml  README.md  binding.gyp  example.pp  grammar.js  package.json  tree-sitter-puppet.wasm
src/: grammar.json  node-types.json  parser.c  scanner.cc
test/corpus/: assignments.txt  binary_expression.txt  boolean_expressions.txt  case.txt  chaining_arrows.txt  class_in_class.txt  class_with_parameters.txt  comments.txt  compositions.txt  config_class.txt  data_structures.txt  element_reference.txt  expressions_boolean.txt  function_call.txt  function_declaration.txt  heredoc.txt  identifier.txt  if_statement.txt  node.txt  reference.txt  resource_collectors.txt  resource_declaration.txt  resource_defaults.txt  resource_usage.txt  selector.txt  string_interpolation.txt  strings.txt  type_declaration.txt  types.txt  unary_expression.txt  virtual_and_exported_resources.txt
test/highlight/: class.pp  if.pp  strings.pp  type.pp  variables.pp
